--- a/src/common/css/mixin.scss
+++ b/src/common/css/mixin.scss
@@ -4,9 +4,9 @@
 		display: block;
 		position: absolute;
 		left: 0;
-		#{$border}: 0;
+		bottom: 0;
 		width: 100%;
-		border-top: 1px solid $color;
+		border-#{$border}: 1px solid $color;
 		content: '';
 		}
 }
