--- a/src/common/css/base.scss
+++ b/src/common/css/base.scss
@@ -14,10 +14,14 @@ body,html{
 		clear: both;
 		visibility: hidden;
 	}
-	
+
 }
 @media (-webkit-min-device-pixel-ratio: 1.5),(min-device-pixel-ratio: 1.5){
   .border-1px{
+    &::before{
+      transform: scaleY(0.7);
+      -webkit-transform: scaleY(0.7);
+    }
 		&::after{
 			transform: scaleY(0.7);
 			-webkit-transform: scaleY(0.7);
@@ -26,6 +30,10 @@ body,html{
 }
 @media (-webkit-min-device-pixel-ratio: 2),(min-device-pixel-ratio: 2){
 .border-1px{
+  &::before{
+    transform: scaleY(0.5);
+    -webkit-transform: scaleY(0.5);
+  }
 &::after{
 	transform: scaleY(0.5);
 	-webkit-transform: scaleY(0.5);
